--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/APRT-Chess/backend#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "firebase": "^10.7.1",
     "socket.io": "^4.7.3"
   }
 }
