--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.7.1",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "uuid": "^9.0.1"
   }
 }
