--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.7.1",
-    "socket.io": "^4.7.3",
-    "uuid": "^9.0.1"
+    "socket.io": "^4.7.3"
   }
 }
