--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.7.1",
-    "redis": "^4.6.12",
+    "ioredis": "^5.3.2",
     "socket.io": "^4.7.3"
   }
 }
