--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/APRT-Chess/backend#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "ioredis": "^5.3.2",
